Some small updates for the Acknowledgments sections in the manual
* doc/emacs/emacs.texi (Acknowledgments): Add profiler author.
* doc/emacs/ack.texi (Acknowledgments): Add some recent contributions.

--- a/doc/emacs/ChangeLog
+++ b/doc/emacs/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-09  Glenn Morris  <rgm@gnu.org>
+
+	* emacs.texi (Acknowledgments): Add profiler author.
+	* ack.texi (Acknowledgments): Add some recent contributions.
+
 2012-11-08  Chong Yidong  <cyd@gnu.org>
 
 	* files.texi (Diff Mode): Doc fixes for
