--- a/etc/NEWS
+++ b/etc/NEWS
@@ -777,9 +777,9 @@ are deprecated and will be removed eventually.
 * Lisp changes in Emacs 24.3
 
 ** New sampling-based Elisp profiler.
-Try M-x profiler-start ... M-x profiler-stop; and then M-x profiler-report.
-The sampling rate can be based on CPU time (only supported on some
-systems), or based on memory allocations.
+Try M-x profiler-start, do some work, and then call M-x profiler-report.
+When finished, use M-x profiler-stop.  The sampling rate can be based on
+CPU time (only supported on some systems) or memory allocations.
 
 +++
 ** CL-style generalized variables are now in core Elisp.
