--- a/src/ChangeLog
+++ b/src/ChangeLog
@@ -1,3 +1,14 @@
+2012-11-09  Dmitry Antipov  <dmantipov@yandex.ru>
+
+	Tweak last vectorlike_header change.
+	* alloc.c (struct Lisp_Vectorlike_Free): Special type to represent
+	vectorlike object on the free list.  This is introduced to avoid
+	some (but not all) pointer casting and aliasing problems, see
+	http://lists.gnu.org/archive/html/emacs-devel/2012-11/msg00105.html.
+	* .gdbinit (pvectype, pvecsize): New commands to examine vectorlike
+	objects.
+	(xvectype, xvecsize): Use them to examine Lisp_Object values.
+
 2012-11-09  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* nsfont.m (ns_descriptor_to_entity): Qcondesed and Qexpanded has
