--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,7 @@
 2012-11-09  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* subr.el (dolist): Don't bind VAR in RESULT.
+
 	* emacs-lisp/advice.el: Miscellaneous cleanup.  Use lexical-binding.
 	(fset, documentation): Don't save real def since we don't advise.
 	(ad-do-advised-functions): Remove problematic `result-form'.
