--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,5 +1,12 @@
 2012-11-09  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* emacs-lisp/advice.el (ad-set-advice-info): Set defalias-fset-function.
+	(ad--defalias-fset): New function.
+	(ad-safe-fset): Remove.
+	(ad-make-freeze-definition): Use cl-letf*.
+
+2012-11-09  Stefan Monnier  <monnier@iro.umontreal.ca>
+
 	* subr.el (dolist): Don't bind VAR in RESULT.
 
 	* emacs-lisp/advice.el: Miscellaneous cleanup.  Use lexical-binding.
