--- a/lisp/ChangeLog
+++ b/lisp/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-10  Leo Liu  <sdl.web@gmail.com>
+
+	* ido.el (ido-set-matches-1): Improve flex matching performance by
+	removing backtracking in the regexp (suggested by Stefan).  (Bug#12796)
+
 2012-11-09  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* emacs-lisp/advice.el (ad-set-advice-info): Set defalias-fset-function.
