Add missing make-local-variable calls in srt-mode.el
* lisp/cedet/srecode/srt-mode.el (srecode-template-mode):
Don't change global values of comment-start, comment-end.

--- a/lisp/cedet/ChangeLog
+++ b/lisp/cedet/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-10  Glenn Morris  <rgm@gnu.org>
+
+	* srecode/srt-mode.el (srecode-template-mode):
+	Don't change global values of comment-start, comment-end.  (Bug#12781)
+
 2012-10-25  David Engster  <deng@randomsample.de>
 
 	* semantic/analyze.el (semantic-analyze-dereference-alias): New
