--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,3 +1,8 @@
+2012-11-11  Glenn Morris  <rgm@gnu.org>
+
+	* variables.texi (Adding Generalized Variables):
+	Use standard formatting for common lisp note about setf functions.
+
 2012-11-07  Martin Rudalics  <rudalics@gmx.at>
 
 	* elisp.texi (Top): Add Recombining Windows to menu.
