--- a/doc/lispref/ChangeLog
+++ b/doc/lispref/ChangeLog
@@ -1,5 +1,7 @@
 2012-11-11  Glenn Morris  <rgm@gnu.org>
 
+	* debugging.texi (Error Debugging): Mention debug-on-message.
+
 	* control.texi (Signaling Errors):
 	* debugging.texi (Error Debugging):
 	* errors.texi (Standard Errors): Add user-error.
